syntax = "proto3";
package ProtoMessage;
option java_package = "org.pot.message.protocol.tunnel";
option java_multiple_files = true;
import "login.proto";
message GhostEnterCmd{
  int64 playerId = 1;
  bytes visaData = 2;
  bytes playerData = 3;
}
message GhostEnterErrorCmd{
  int64 playerId = 1;
}
message GhostEnterSuccessCmd{
  int64 playerId = 1;
}
message GhostUpdateCmd{
  int64 playerId = 1;
  bytes playerData = 2;
}
message GhostExitCmd{
  int64 playerId = 1;
}
message GhostExitErrorCmd{
  int64 playerId = 1;
}
message GhostExitSuccessCmd{
  int64 playerId = 1;
}
message GhostDestroyCmd{
  int64 playerId = 1;
}
message GhostDestroyErrorCmd{
  int64 playerId = 1;
}
message GhostDestroySuccessCmd{
  int64 playerId = 1;
}
message GhostFinishCmd{
  int64 playerId = 1;
  bytes visaData = 2;
  bytes playerData = 3;
}
message GhostKeepAliveCmd{
  int64 playerId = 1;
  bytes visaData = 2;
}
message GhostReconnectCmd{
  int64 playerId = 1;
  LoginDataS2S loginDataS2S = 2;
}
message GhostReconnectSuccessCmd{
  int64 playerId = 1;
}
message GhostReconnectErrorCmd{
  int64 playerId = 1;
}

